# uusi-repositorio

./: README.md
osa2/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
osa2/nhl-statistics-1/src/tests/: statistics_service_test.py
osa2/poetry-web/: pyproject.toml
osa2/project-reader/: pyproject.toml
osa3/hello-robot/: log.html  output.xml  report.html
osa3/login-robot/: log.html  output.xml  report.html
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot  resource.robot
osa4/: retro.md
osa4/maksukortti-mock/src/: kassapaate.py
