[tool.poetry]
name = "poetry-web"
version = "3.10"
description = "juu"
authors = ["Your Name <you@example.com>"]
license = "on"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
